[package]
name = "hostwatch"
version = "1.0.2"
edition = "2021"

[dependencies]
pcap = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
pnet = "0.35.0"
csv = "1.3.1"
cidr = "0.3.1"
syslog-tracing = "0.3.1"
daemonize = "0.5.0"
time = "0.3.45"

